@@ -1,17 +1,6 @@
 DIST FiSH-irssi.v0.99-source.zip 43491 RMD160 d4a042a0ca28dfe2839f13a46a18d009df769bce SHA1 4af337be9b985f134c0e84bb652aad63e28c46be SHA256 fe5ec748886620494c51e568093ff226b663a3a7ee7716ab06c24e29bf828e3c
 DIST irssi-0.8.9.tar.bz2 816465 RMD160 7a0a2a639c041802bfddd458c35bccaec8084013 SHA1 57799a1e99ac5f6694eb6fd049d39a4e2e51f576 SHA256 230ffa21a97f930000e0004f18cf5b709d5da5408d297e1567538a53cf91c32c
+EBUILD irssi-mod-fish-0.99-r1.ebuild 2094 RMD160 b334773df1724456b26e099113c949054535ca32 SHA1 853fb4c8af270f66d29078485b386a4ebd3eea75 SHA256 a694df93766ec0979ce469f26a5817c629c3d4749628bdc2e42837dcf5c9fd40
 EBUILD irssi-mod-fish-0.99.ebuild 2094 RMD160 db250d3038d043a887a33102ae2b524b84d1809e SHA1 c4dedf758fc31c5b5e77e9318a2dd7ef02812e3b SHA256 691b154e3cc75f4b7d8553a8263f55622499d5a0439301414909c25be36052ea
-MD5 c990e97a285200f524c578ca3c6c7aaa irssi-mod-fish-0.99.ebuild 2094
-RMD160 db250d3038d043a887a33102ae2b524b84d1809e irssi-mod-fish-0.99.ebuild 2094
-SHA256 691b154e3cc75f4b7d8553a8263f55622499d5a0439301414909c25be36052ea irssi-mod-fish-0.99.ebuild 2094
-MISC ChangeLog 345 RMD160 1f1612d119ef3b914c67c462bbf874fe02ec1665 SHA1 a6395af76512e6d9265ff133a4574a1aaa39c0d6 SHA256 094e1fa8d01ae1f599f7922f3098a5e8e29de9c474dfeedb902da7e64e05ba55
-MD5 692404f17e40e9382d44af3d9be321db ChangeLog 345
-RMD160 1f1612d119ef3b914c67c462bbf874fe02ec1665 ChangeLog 345
-SHA256 094e1fa8d01ae1f599f7922f3098a5e8e29de9c474dfeedb902da7e64e05ba55 ChangeLog 345
+MISC ChangeLog 458 RMD160 56483e2aa960d14a0a0bffe15506f4d173fc9c8c SHA1 e9c11f6d63cc37a4d2cb7aec32561edc3062b5ee SHA256 bdd1bfdf64264eb8ce82408d3c255dac7fa2837197b0be25a21b3a5b111f3e3e
 MISC metadata.xml 675 RMD160 52b320d34a0869e1720f25803333a16b2ee3fd51 SHA1 24c03c6b9b67bf2f4d58b5bc9d99a7fb91ddf77a SHA256 91b527bfcc36a40f43cfe9b48eee964335aa6af2b045f2eb9c43a5153e9f55ad
-MD5 cd8eb2086a313541db52430d64ce68cc metadata.xml 675
-RMD160 52b320d34a0869e1720f25803333a16b2ee3fd51 metadata.xml 675
-SHA256 91b527bfcc36a40f43cfe9b48eee964335aa6af2b045f2eb9c43a5153e9f55ad metadata.xml 675
-MD5 95b53ca7680fe1089ed4cf47715c5d9f files/digest-irssi-mod-fish-0.99 497
-RMD160 2b1a0f0d434eca79e3c57c9e98644bd5885aff54 files/digest-irssi-mod-fish-0.99 497
-SHA256 70972d245f74f6cfe16004405179cf3c7202783345022e387affe30ddcd2097f files/digest-irssi-mod-fish-0.99 497
