@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Jun 2009; Bryan Drewery <bryan@shatow.net> ChangeLog:
+  Change homepage to official http://fish.secure.la/
+
   07 Apr 2007; Bryan Drewery <bryan@shatow.net> ChangeLog:
   Change homepage to official http://fish.sekure.us/
 
